--- a/practica-3/P3/Makefile
+++ b/practica-3/P3/Makefile
@@ -7,6 +7,7 @@ SRC=P32.cpp
 
 P=4
 FILE_NAME="data.txt"
+N=512
 
 e3_test:
 	$(CCX) $(CFLAG_TEST) $(SRC) -o $@
@@ -18,7 +19,7 @@ run_e3_test:
 	mpirun -np 2 ./e3_test
 
 run_e3_data:
-	mpirun -np $(P) ./e3_data $(FILE_NAME)
+	mpirun -np $(P) ./e3_data $(FILE_NAME) $(N)
 
 clean:
 	rm e3_test e3_data
